MDEV-24323 Crash on recovery after kill during instant ADD COLUMN

row_undo_ins_parse_undo_rec(): Do not try to read non-existing
virtual column information for the metadata record.